# bitoo

./: .env.example  .gitattributes  .gitignore  Dockerfile  pyproject.toml
app/: auth.py  chat.py  config.py
notebooks/: answer_agent.ipynb  sql_agent.ipynb
src/core/: chain.py  constants.py  schemas.py  service.py  supabase.py  utils.py
src/core/chains/: answer.py  answer_chain.py  sql_chain.py
src/core/chains/sql/: callback.py  prompt.py  sql_chain.py  utils.py
